Solid and Wireframe viewport performance hit on AMD Radeon GPUs #84277

Closed
opened 2020-12-30 19:48:18 +01:00 by Rob Williams · 8 comments

System Information
Operating system: Windows 10 (20H2), Linux (Ubuntu 20.04 5.4.0-58-generic)
Graphics card: AMD Radeon (including, at least: RX 5500, RX 5600, RX 5700, RX 5700 XT, RX 6800, RX 6800 XT, and RX 6900 XT)

Blender Version
Broken: 2.91.0+
Worked: 2.90.1

Caused by 38ef35b1ed

Short description of error
With the launch of Blender 2.91, AMD Radeon GPUs suffer a performance hit in Solid and Wireframe viewport modes.

Windows test using Radeon RX 6900 XT w/ Radeon Adrenalin 20.12.2 driver and the 2.77 'Racing Car' project:

LookDev Solid Wireframe
2.90.1 ~17 FPS ~85 FPS ~70 FPS
2.91.0 ~17 FPS ~67 FPS ~35 FPS
2.92.0 c1740e9ad0 ~17 FPS ~65 FPS ~35 FPS

Linux test using Radeon RX 6900 XT w/ Radeon Adrenalin 20.45 driver and the 2.77 'Racing Car' project:

LookDev Solid Wireframe
2.90.1 ~18 FPS ~90 FPS ~90 FPS
2.91.0 ~18 FPS ~70 FPS ~58 FPS

This degradation has been witnessed on both AMD Ryzen Threadripper (TRX40) and AMD Ryzen (AM4) platforms. NVIDIA doesn't seem impacted.

Side-by-side example (2.90 on left; 2.91 on right):

Blender-2.91-vs-2.90-AMD-Radeon-Viewport-Performance.jpg

More context with other GPUs included:

Blender-2.91-4K-Racing-Car-Wireframe-Viewport-Performance-December-2020.jpg

Blender-2.91-4K-Controller-Wireframe-Viewport-Performance-December-2020.jpg

Please ignore the odd NVIDIA scaling that's seen here, as the test method needs improving (I haven't used my automated wireframe performance data until now), but the greatly impacted AMD performance is easy to see. As noted above, this performance issue does not occur in the previous 2.90 release. In 2.90, AMD might still underperform compared to my expectations, but Solid and Wireframe modes are notably smoother there than in 2.91.

The same issue seen in Ubuntu:

Blender_Viewport_Ubuntu_Radeon_RX_6900_XT.jpg

Performance in Linux seems better out-of-the-gate, so the performance detriment by moving to 2.91 isn't nearly as obvious.

Exact steps for others to reproduce the error
Using an AMD Radeon graphics card with up-to-date drivers,

  • run Blender 2.90 and 2.91 side-by-side, and open the same project.
  • Enable wireframe mode in each ({key shift Z}),
  • using the mouse or holding num6 to rotate the camera in both clients should make the performance drop obvious.
    Using an FPS overlay (eg: Fraps, MangoHud) will make it easier to quantify.

(Project: https://download.blender.org/demo/test/splash-pokedstudio.blend.zip)

**System Information** Operating system: Windows 10 (20H2), Linux (Ubuntu 20.04 5.4.0-58-generic) Graphics card: AMD Radeon (including, at least: RX 5500, RX 5600, RX 5700, RX 5700 XT, RX 6800, RX 6800 XT, and RX 6900 XT) **Blender Version** Broken: 2.91.0+ Worked: 2.90.1 Caused by 38ef35b1ed **Short description of error** With the launch of Blender 2.91, AMD Radeon GPUs suffer a performance hit in Solid and Wireframe viewport modes. Windows test using Radeon RX 6900 XT w/ Radeon Adrenalin 20.12.2 driver and the 2.77 'Racing Car' project: ||LookDev|Solid|Wireframe | -- | -- | -- | -- | |**2.90.1**|~17 FPS|~85 FPS|~70 FPS |**2.91.0**|~17 FPS|~67 FPS|~35 FPS |**2.92.0 c1740e9ad02d**|~17 FPS|~65 FPS|~35 FPS Linux test using Radeon RX 6900 XT w/ Radeon Adrenalin 20.45 driver and the 2.77 'Racing Car' project: ||LookDev|Solid|Wireframe | -- | -- | -- | -- | |**2.90.1**|~18 FPS|~90 FPS|~90 FPS |**2.91.0**|~18 FPS|~70 FPS|~58 FPS This degradation has been witnessed on both AMD Ryzen Threadripper (TRX40) and AMD Ryzen (AM4) platforms. NVIDIA doesn't seem impacted. Side-by-side example (2.90 on left; 2.91 on right): ![Blender-2.91-vs-2.90-AMD-Radeon-Viewport-Performance.jpg](https://archive.blender.org/developer/F9538689/Blender-2.91-vs-2.90-AMD-Radeon-Viewport-Performance.jpg) More context with other GPUs included: ![Blender-2.91-4K-Racing-Car-Wireframe-Viewport-Performance-December-2020.jpg](https://archive.blender.org/developer/F9538691/Blender-2.91-4K-Racing-Car-Wireframe-Viewport-Performance-December-2020.jpg) ![Blender-2.91-4K-Controller-Wireframe-Viewport-Performance-December-2020.jpg](https://archive.blender.org/developer/F9538693/Blender-2.91-4K-Controller-Wireframe-Viewport-Performance-December-2020.jpg) Please ignore the odd NVIDIA scaling that's seen here, as the test method needs improving (I haven't used my automated wireframe performance data until now), but the greatly impacted AMD performance is easy to see. As noted above, this performance issue does not occur in the previous 2.90 release. In 2.90, AMD might still underperform compared to my expectations, but Solid and Wireframe modes are notably smoother there than in 2.91. The same issue seen in Ubuntu: ![Blender_Viewport_Ubuntu_Radeon_RX_6900_XT.jpg](https://archive.blender.org/developer/F9551627/Blender_Viewport_Ubuntu_Radeon_RX_6900_XT.jpg) Performance in Linux seems better out-of-the-gate, so the performance detriment by moving to 2.91 isn't nearly as obvious. **Exact steps for others to reproduce the error** Using an AMD Radeon graphics card with up-to-date drivers, - run Blender 2.90 and 2.91 side-by-side, and open the same project. - Enable wireframe mode in each ({key shift Z}), - using the mouse or holding num6 to rotate the camera in both clients should make the performance drop obvious. Using an FPS overlay (eg: Fraps, MangoHud) will make it easier to quantify. (Project: https://download.blender.org/demo/test/splash-pokedstudio.blend.zip)
Author

Added subscriber: @Deathspawner

Added subscriber: @Deathspawner

Added subscriber: @AndreaMonzini

Added subscriber: @AndreaMonzini

Added subscriber: @bdjones

Added subscriber: @bdjones

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Nice catch. Thanks for the report.
I can confirm a reduction in the fps of the animation in wireframe of this file (from 30fps to 14fps) apparently due to 38ef35b1ed

Nice catch. Thanks for the report. I can confirm a reduction in the fps of the animation in wireframe of this file (from 30fps to 14fps) apparently due to 38ef35b1ed

This issue was referenced by 03c1c5f3a4

This issue was referenced by 03c1c5f3a4c58e9f85a9ae79010a4fd41c8af92c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2021-02-01 13:41:23 +01:00
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:15:35 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84277
No description provided.